# app.py
@@ -1,9 +1,9 @@
 # app.py
 
 from flask import render_template
-from features import search_feature_by_name  # Import the features Blueprint
+from features import search_feature_by_name
 import config
-from config import connex_app  # Import connex_app
+from config import connex_app
 from models import Trail
 
 app = config.connex_app
@@ -11,15 +11,22 @@ app.add_api(config.basedir / "swagger.yml")
 
 @app.route("/")
 def home():
-    """
-    Render the homepage with all trails.
-    """
     try:
         # Fetch all trails from the database
         trails = Trail.query.all()
+        trails_with_features = []
+        for trail in trails:
+            trail_data = {
+                "trail_name": trail.trail_name,
+                "trail_summary": trail.trail_summary,
+                "location": trail.location,
+                "difficulty": trail.difficulty,
+                "route_type": trail.route_type,
+                "features": [tf.feature.feature_name for tf in trail.features]
+            }
+            trails_with_features.append(trail_data)
 
-        # Render the template and pass the trails
-        return render_template("home.html", trails=trails)
+        return render_template("home.html", trails=trails_with_features)
     except Exception as e:
         return f"An error occurred: {str(e)}", 500
 
